Proyecto Evaluacion 3 semana
Entrega final

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -4,4 +4,5 @@
     <string name="marcianito_xxh">marcianito xxh</string>
     <string name="bienvenidos">Herzlich willkommen</string>
     <string name="entrar">Eintreten</string>
+    <string name="proyecto">Entrar</string>
 </resources>
