--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -4,4 +4,5 @@
     <string name="marcianito_xxh">marcianito xxh</string>
     <string name="bienvenidos">Welcome</string>
     <string name="entrar">Get in</string>
+    <string name="proyecto">Entrar</string>
 </resources>
