--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -4,4 +4,5 @@
     <string name="marcianito_xxh">marcianito xxh</string>
     <string name="bienvenidos">Bienvenue</string>
     <string name="entrar">Pour entrer</string>
+    <string name="proyecto">Entrar</string>
 </resources>
