--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="marcianito_xxh">marcianito xxh</string>
     <string name="bienvenidos">Bienvenidos</string>
     <string name="entrar">Entrar</string>
+    <string name="proyecto">Entrar</string>
 </resources>
